--- a/client/src/components/ErrorModal/ErrorModal.css
+++ b/client/src/components/ErrorModal/ErrorModal.css
@@ -2,9 +2,9 @@
 .error-modal {
     width: 300px;
     padding: 1rem;
-    border: 1px solid #ccc;
+    border: 2px solid #000000; /* Thicker border with the same yellow color */
     border-radius: 8px;
-    background-color: #fff;
+    background-color: #e9e7e7;
   }
   
 
@@ -20,8 +20,8 @@
   }
   
   .error-modal button {
-    background-color: #f0ad4e; 
-    color: white;
+    background-color: #f7c600; 
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 4px;
     padding: 0.5rem 1rem;
@@ -29,5 +29,5 @@
   }
   
   .error-modal button:hover {
-    background-color: #ec971f; 
+    background-color: #e5b700; 
   }
