--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -1,23 +1,34 @@
 /* MainPage.css */
-.main-page {
-    display: flex; /* Use flexbox for layout */
-    flex-direction: column; /* Stack children vertically */
-    align-items: center; /* Center content */
-    padding: 20px; /* Add padding */
-    color: #fff; /* Default text color */
-    /* No need for width or max-width since it inherits from main-content-container */
-  }
-  
-  .live-page {
-    padding: 20px;
-    background-color: #646262; /* Darker grey for better contrast */
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-    max-width: 300px;
-    margin: 0 auto;
-  }
-  
-  .admin-user {
-    width: 100%; /* Full width for Admin and User */
-    margin: 10px 0; /* Space between Admin and User components */
-  }
+/* .main-page {
+    display: flex;
+    flex-direction: column; 
+    padding: 20px; 
+    color: #fff; 
+    
+    } */
+
+.main-page-container {
+  align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  color: #fff;
+  gap: 10px;
+  width: 100vh;
+}
+
+.live-page {
+  padding: 20px;
+  background-color: #646262; /* Darker grey for better contrast */
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.admin-user {
+  margin: 10px 0;
+}
