--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -1,12 +1,3 @@
-/* MainPage.css */
-/* .main-page {
-    display: flex;
-    flex-direction: column; 
-    padding: 20px; 
-    color: #fff; 
-    
-    } */
-
 .main-page-container {
   align-items: center;
   max-width: 800px;
@@ -22,9 +13,9 @@
 
 .live-page {
   padding: 20px;
-  background-color: #646262; /* Darker grey for better contrast */
+  background-color: #646262; 
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
   max-width: 300px;
   margin: 0 auto;
 }
